tests/grammar/schema/type/type_fail_11/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:5
  |
7 |     "cards": [1]
  |     ^ expected [{int:any}], got [int(1)]
  |
 --> ${CWD}/main.k:3:5
  |
3 |     cards: [{int:}]
  |     ^ variable is defined here, its type is [{int:any}], but got [int(1)]
  |